# korb

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
korb/: __init__.py  __main__.py  core.py  ergebnisse.py  predict.py  schedule.py  standings.py  team.py
korb/skills/: SKILL_LEAGUE_TOP_N_ANALYSIS.md  SKILL_TEAM_ANALYSIS.md  __init__.py
skills/: SKILL_LEAGUE_TOP_N_ANALYSIS.md  SKILL_TEAM_ANALYSIS.md
tests/: conftest.py  test_cli.py  test_core.py  test_download.py  test_ergebnisse.py  test_predict.py  test_schedule.py  test_standings.py  test_team.py
tests/fixtures/: ergebnisse_minimal.html  spielplan_finalized.html  spielplan_minimal.html
