[project]
name = "korb"
version = "0.1.0"
description = "A CLI toolkit for DBB basketball league analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest-cov>=7.1.0",
]

[project.scripts]
korb = "korb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
