[project]
name = "korb"
version = "0.1.0"
description = "A CLI toolkit for DBB basketball league analysis"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Malvavisc0", email = "207609879+malvavisc0@users.noreply.github.com" },
]
requires-python = ">=3.10"
keywords = ["basketball", "dbb", "cli", "sports-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/malvavisc0/korb"
Repository = "https://github.com/malvavisc0/korb"
Issues = "https://github.com/malvavisc0/korb/issues"

[project.scripts]
korb = "korb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
