[project]
name = "korb"
dynamic = ["version"]
description = "A CLI toolkit for DBB basketball league analysis"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Malvavisc0", email = "207609879+malvavisc0@users.noreply.github.com" },
]
requires-python = ">=3.10"
keywords = ["basketball", "dbb", "cli", "sports-analytics", "german-basketball"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/malvavisc0/korb"
Repository = "https://github.com/malvavisc0/korb"
Issues = "https://github.com/malvavisc0/korb/issues"

[project.scripts]
korb = "korb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "korb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["korb"]

# Syncing Hatch env with your dependency groups
[tool.hatch.envs.default]
extra-dependencies = [
    "ipython",
]
features = ["dev"] 

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --cov=korb --cov-report=term-missing"

[tool.coverage.run]
source = ["korb"]
omit = ["tests/*", "*/__main__.py"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"